--- a/index.html
+++ b/index.html
@@ -1,427 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Emergency Plumber New Orleans | Plumber Pals</title>
+  <meta name="description" content="Emergency plumber service in New Orleans. Same day emergency plumber service. Call (833) 725-6652 or 833-PAL-NOLA." />
 
-<title>Emergency Plumber New Orleans | Plumber Pals</title>
-
-<meta name="description" content="Emergency plumber service in New Orleans. Same day emergency plumber service. Call (833) 725-6652 or 833-PAL-NOLA.">
-
-<link rel="stylesheet" href="style.css">
-
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
-
-<!-- HERO SECTION -->
-
-<div class="hero">
-
-<img src="assets/logo.png" class="logo">
-
-
-<div class="floatButton">
-
-<a href="tel:18337256652" class="callButtonSmall">
-
-📞 CALL NOW
-
-</a>
-
-</div>
-
-
-<a href="tel:18337256652" class="callButtonBig">
-
-📞 CALL NOW
-
-</a>
-
-
-</div>
-
-
-
-<!-- SERVICES -->
-
-<div class="services">
-
-<h2>
-
-Our Most Requested Services
-
-</h2>
-
-
-<h3>
-
-Same Day Emergency Plumber Service Ready
-
-</h3>
-
-
-
-<div class="serviceGrid">
-
-
-<div class="serviceBox">
-
-<h4>
-
-Emergency Leak Repair
-
-</h4>
-
-<p>
-
-Burst pipes and hidden leaks repaired quickly.
-
-</p>
-
-</div>
-
-
-
-<div class="serviceBox">
-
-<h4>
-
-Emergency Drain Cleaning
-
-</h4>
-
-<p>
-
-Clogged sinks, tubs and main lines cleared fast.
-
-</p>
-
-</div>
-
-
-
-<div class="serviceBox">
-
-<h4>
-
-Emergency Water Heater Repair
-
-</h4>
-
-<p>
-
-Diagnose and repair gas and electric water heaters.
-
-</p>
-
-</div>
-
-
-
-<div class="serviceBox">
-
-<h4>
-
-Emergency Toilet & Faucet Repair
-
-</h4>
-
-<p>
-
-Leaks, replacements and installations.
-
-</p>
-
-</div>
-
-
-</div>
-
-
-</div>
-
-
-
-<!-- SERVICE AREA -->
-
-<div class="areas">
-
-<h2>
-
-Serving New Orleans Area
-
-</h2>
-
-
-<p>
-
-New Orleans | Metairie | Kenner | Chalmette | Gretna | Harvey
-
-</p>
-
-</div>
-
-
-
-<!-- PHONE FOOTER -->
-
-<div class="footerCall">
-
-
-<div class="numberBig">
-
-(833) 725-6652
-
-</div>
-
-
-<div class="numberSmall">
-
-833-PAL-NOLA
-
-</div>
-
-
-</div>
-
-
+  <!-- HERO -->
+  <div class="hero">
+    <img class="logo" src="assets/logo.png" alt="Plumber Pals - Emergency Plumber in New Orleans" />
+  </div>
+
+  <!-- FLOATING CALL BUTTON -->
+  <div class="floatButton">
+    <a class="callButtonBig" href="tel:8337256652">📞 CALL NOW</a>
+  </div>
+
+  <!-- SERVICES -->
+  <section class="services">
+    <h2>Our Most Requested Services</h2>
+    <h3>Same Day Emergency Plumber Service Ready</h3>
+
+    <div class="serviceGrid">
+      <div class="serviceBox">
+        <h4>Emergency Leak Repair</h4>
+        <p>Burst pipes and hidden leaks repaired quickly.</p>
+      </div>
+
+      <div class="serviceBox">
+        <h4>Emergency Drain Cleaning</h4>
+        <p>Clogged sinks, tubs and main lines cleared fast.</p>
+      </div>
+
+      <div class="serviceBox">
+        <h4>Emergency Water Heater Repair</h4>
+        <p>Diagnose and repair gas and electric water heaters.</p>
+      </div>
+
+      <div class="serviceBox">
+        <h4>Emergency Toilet &amp; Faucet Repair</h4>
+        <p>Leaks, replacements and installations.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- AREAS -->
+  <section class="areas">
+    <h2>Serving New Orleans Area</h2>
+    <div class="areasList">
+      New Orleans&nbsp; | &nbsp;Metairie&nbsp; | &nbsp;Kenner&nbsp; | &nbsp;Chalmette&nbsp; | &nbsp;Gretna&nbsp; | &nbsp;Harvey
+    </div>
+  </section>
+
+  <!-- FOOTER CALL -->
+  <section class="footerCall">
+    <div class="numberBig">(833) 725-6652</div>
+    <div class="numberSmall">833-PAL-NOLA</div>
+
+    <div style="margin-top:16px;">
+      <a class="callButtonSmall" href="tel:8337256652">📞 CALL NOW</a>
+    </div>
+  </section>
 </body>
-
 </html>
-
-
-
-body{
-
-margin:0;
-
-font-family:Arial;
-
-text-align:center;
-
-background:
-
-linear-gradient(rgba(255,255,255,.85),
-rgba(255,255,255,.95)),
-
-url("assets/nola-bg.jpg");
-
-background-size:cover;
-
-}
-
-
-.hero{
-
-padding:20px;
-
-}
-
-
-.logo{
-
-width:95%;
-
-max-width:700px;
-
-}
-
-
-.floatButton{
-
-margin-top:-70px;
-
-margin-bottom:20px;
-
-}
-
-
-.callButtonSmall{
-
-background:green;
-
-color:white;
-
-padding:14px 28px;
-
-border-radius:40px;
-
-font-size:20px;
-
-font-weight:bold;
-
-text-decoration:none;
-
-display:inline-block;
-
-border:3px solid gold;
-
-box-shadow:0px 6px 20px rgba(0,0,0,.3);
-
-}
-
-
-
-.callButtonBig{
-
-display:inline-block;
-
-margin-top:20px;
-
-background:green;
-
-color:white;
-
-padding:18px 60px;
-
-border-radius:50px;
-
-font-size:28px;
-
-font-weight:bold;
-
-text-decoration:none;
-
-border:3px solid gold;
-
-box-shadow:0px 10px 25px rgba(0,0,0,.3);
-
-}
-
-
-
-.services{
-
-margin-top:20px;
-
-padding:20px;
-
-background:white;
-
-border-radius:20px;
-
-margin-left:10px;
-
-margin-right:10px;
-
-box-shadow:0px 10px 30px rgba(0,0,0,.2);
-
-}
-
-
-
-.services h2{
-
-color:purple;
-
-font-size:28px;
-
-margin-bottom:5px;
-
-}
-
-
-
-.services h3{
-
-color:gray;
-
-margin-bottom:20px;
-
-}
-
-
-
-.serviceGrid{
-
-display:grid;
-
-grid-template-columns:1fr 1fr;
-
-gap:12px;
-
-}
-
-
-
-.serviceBox{
-
-background:#f6f6f6;
-
-padding:15px;
-
-border-radius:12px;
-
-box-shadow:0px 3px 10px rgba(0,0,0,.1);
-
-}
-
-
-
-.serviceBox h4{
-
-color:purple;
-
-margin-bottom:6px;
-
-}
-
-
-
-.areas{
-
-margin-top:20px;
-
-padding:10px;
-
-font-size:20px;
-
-}
-
-
-
-.footerCall{
-
-margin-top:30px;
-
-padding:20px;
-
-}
-
-
-
-.numberBig{
-
-font-size:32px;
-
-font-weight:bold;
-
-color:purple;
-
-}
-
-
-
-.numberSmall{
-
-font-size:20px;
-
-margin-top:5px;
-
-}
-
-
-
-|
-|-- index.html
-|-- style.css
-|
-|-- assets
-     |
-     |-- logo.png
-     |-- nola-bg.jpg
-
