--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- HERO -->
   <div class="hero">
-    <img class="logo" src="assets/logo.png" alt="Plumber Pals - Emergency Plumber in New Orleans" />
+    <img class="logo" src="logo.png"" alt="Plumber Pals - Emergency Plumber in New Orleans" />
   </div>
 
   <!-- FLOATING CALL BUTTON -->
