--- a/index.html
+++ b/index.html
@@ -3,68 +3,85 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Emergency Plumber New Orleans | Plumber Pals</title>
-  <meta name="description" content="Emergency plumber service in New Orleans. Same day emergency plumber service. Call (833) 725-6652 or 833-PAL-NOLA." />
-
+  <meta name="description" content="Emergency plumber service in New Orleans. Same day / emergency service ready. Call (833) 725-6652 or 833-PAL-NOLA." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <!-- HERO -->
-  <div class="hero">
-    <img class="logo" src="logo.png"" alt="Plumber Pals - Emergency Plumber in New Orleans" />
+  <div class="container">
+
+    <div class="hero">
+      <!-- This should be your “logo/float” image -->
+      <img class="logo" src="logo.png" alt="Plumber Pals - Emergency Plumber in New Orleans" />
+    </div>
+
+    <div class="floatButton">
+      <a class="callButtonSmall" href="tel:+18337256652">
+        <span>📞</span> CALL NOW
+      </a>
+    </div>
+
+    <div class="callButtonBigWrap">
+      <a class="callButtonBig" href="tel:+18337256652">
+        <span class="phone">📞</span> CALL NOW
+      </a>
+    </div>
+
+    <section class="services">
+      <h2>Our Most Requested<br/>Services</h2>
+      <h3>Same Day Emergency Plumber Service Ready</h3>
+
+      <div class="serviceGrid">
+
+        <div class="serviceBox">
+          <div class="icon">💧</div>
+          <div class="serviceText">
+            <h4>Emergency Leak Repair</h4>
+            <p>Burst pipes and hidden leaks repaired quickly.</p>
+          </div>
+        </div>
+
+        <div class="serviceBox">
+          <div class="icon">🚰</div>
+          <div class="serviceText">
+            <h4>Emergency Drain Cleaning</h4>
+            <p>Clogged sinks, tubs and main lines cleared fast.</p>
+          </div>
+        </div>
+
+        <div class="serviceBox">
+          <div class="icon">🔥</div>
+          <div class="serviceText">
+            <h4>Emergency Water Heater Repair</h4>
+            <p>Diagnose and repair gas and electric water heaters.</p>
+          </div>
+        </div>
+
+        <div class="serviceBox">
+          <div class="icon">🚽</div>
+          <div class="serviceText">
+            <h4>Emergency Toilet &amp; Faucet Repair</h4>
+            <p>Leaks, replacements and installations.</p>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="areas">
+        <h2>Serving New Orleans Area</h2>
+        <div class="areasList">
+          New Orleans &nbsp;|&nbsp; Metairie &nbsp;|&nbsp; Kenner &nbsp;|&nbsp; Chalmette &nbsp;|&nbsp; Gretna &nbsp;|&nbsp; Harvey
+        </div>
+      </div>
+
+      <div class="footerCall">
+        <div class="numberBig">(833) 725-6652</div>
+        <div class="numberSmall">833-PAL-NOLA</div>
+      </div>
+
+    </section>
+
   </div>
-
-  <!-- FLOATING CALL BUTTON -->
-  <div class="floatButton">
-    <a class="callButtonBig" href="tel:8337256652">📞 CALL NOW</a>
-  </div>
-
-  <!-- SERVICES -->
-  <section class="services">
-    <h2>Our Most Requested Services</h2>
-    <h3>Same Day Emergency Plumber Service Ready</h3>
-
-    <div class="serviceGrid">
-      <div class="serviceBox">
-        <h4>Emergency Leak Repair</h4>
-        <p>Burst pipes and hidden leaks repaired quickly.</p>
-      </div>
-
-      <div class="serviceBox">
-        <h4>Emergency Drain Cleaning</h4>
-        <p>Clogged sinks, tubs and main lines cleared fast.</p>
-      </div>
-
-      <div class="serviceBox">
-        <h4>Emergency Water Heater Repair</h4>
-        <p>Diagnose and repair gas and electric water heaters.</p>
-      </div>
-
-      <div class="serviceBox">
-        <h4>Emergency Toilet &amp; Faucet Repair</h4>
-        <p>Leaks, replacements and installations.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- AREAS -->
-  <section class="areas">
-    <h2>Serving New Orleans Area</h2>
-    <div class="areasList">
-      New Orleans&nbsp; | &nbsp;Metairie&nbsp; | &nbsp;Kenner&nbsp; | &nbsp;Chalmette&nbsp; | &nbsp;Gretna&nbsp; | &nbsp;Harvey
-    </div>
-  </section>
-
-  <!-- FOOTER CALL -->
-  <section class="footerCall">
-    <div class="numberBig">(833) 725-6652</div>
-    <div class="numberSmall">833-PAL-NOLA</div>
-
-    <div style="margin-top:16px;">
-      <a class="callButtonSmall" href="tel:8337256652">📞 CALL NOW</a>
-    </div>
-  </section>
 </body>
 </html>
