--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="callButtonBigWrap">
-      <a class="callButtonBig" href="tel:+18337256652">
+       href="tel:+18337256652">
         <span class="phone">📞</span> CALL NOW
       </a>
     </div>
