--- a/index.html
+++ b/index.html
@@ -1,175 +1,82 @@
+<!-- index.html (FINAL) -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Emergency Plumber New Orleans | Plumber Pals</title>
-
-<meta name="description" content="Emergency plumber service in New Orleans. Same day emergency plumbing service ready. Call (833) 725-6652 or 833-PAL-NOLA.">
-
-<link rel="stylesheet" href="style.css">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Emergency Plumber New Orleans | Plumber Pals</title>
+  <meta name="description" content="Emergency plumber service in New Orleans. Same day / emergency service ready. Call (833) 725-6652 or 833-PAL-NOLA." />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
-
 <body>
-
-<div class="container">
-
-
-<div class="hero">
-
-<img class="logo" src="logo.png" alt="Plumber Pals Emergency Plumber New Orleans">
-
-</div>
-
-
-
-<!-- ONE CALL BUTTON ONLY -->
-
-<div class="callButtonBigWrap">
-
-<a class="callButtonBig" href="tel:+18337256652">
-
-<span class="phone">📞</span> CALL NOW
-
-</a>
-
-</div>
-
-
-
-<section class="services">
-
-
-<h2>
-Our Most Requested<br>
-Services
-</h2>
-
-
-<h3>
-Same Day Emergency Plumber Service Ready
-</h3>
-
-
-
-<div class="serviceGrid">
-
-
-
-<div class="serviceBox">
-
-<div class="icon">💧</div>
-
-<div class="serviceText">
-
-<h4>Emergency Leak Repair</h4>
-
-<p>Burst pipes and hidden leaks repaired quickly.</p>
-
-</div>
-
-</div>
-
-
-
-<div class="serviceBox">
-
-<div class="icon">🚰</div>
-
-<div class="serviceText">
-
-<h4>Emergency Drain Cleaning</h4>
-
-<p>Clogged sinks, tubs and main lines cleared fast.</p>
-
-</div>
-
-</div>
-
-
-
-<div class="serviceBox">
-
-<div class="icon">🔥</div>
-
-<div class="serviceText">
-
-<h4>Emergency Water Heater Repair</h4>
-
-<p>Diagnose and repair gas and electric water heaters.</p>
-
-</div>
-
-</div>
-
-
-
-<div class="serviceBox">
-
-<div class="icon">🚽</div>
-
-<div class="serviceText">
-
-<h4>Emergency Toilet & Faucet Repair</h4>
-
-<p>Leaks, replacements and installations.</p>
-
-</div>
-
-</div>
-
-
-
-</div>
-
-
-
-<div class="areas">
-
-<h2>Serving New Orleans Area</h2>
-
-<div class="areasList">
-
-New Orleans |
-Metairie |
-Kenner |
-Chalmette |
-Gretna |
-Harvey
-
-</div>
-
-</div>
-
-
-
-<div class="footerCall">
-
-<div class="numberBig">
-
-(833) 725-6652
-
-</div>
-
-<div class="numberSmall">
-
-833-PAL-NOLA
-
-</div>
-
-</div>
-
-
-
-</section>
-
-
-</div>
-
+  <div class="container">
+
+    <div class="hero">
+      <img class="logo" src="logo.png" alt="Plumber Pals - Emergency Plumber in New Orleans" />
+    </div>
+
+    <!-- ONLY ONE BUTTON (the big one). The “float button” is already printed on the logo image -->
+    <div class="callButtonBigWrap">
+      <a class="callButtonBig" href="tel:+18337256652">
+        <span class="phone">📞</span> CALL NOW
+      </a>
+    </div>
+
+    <section class="services">
+      <h2>Our Most Requested<br/>Services</h2>
+      <h3>Same Day Emergency Plumber Service Ready</h3>
+
+      <div class="serviceGrid">
+
+        <div class="serviceBox">
+          <div class="icon">💧</div>
+          <div class="serviceText">
+            <h4>Emergency Leak Repair</h4>
+            <p>Burst pipes and hidden leaks repaired quickly.</p>
+          </div>
+        </div>
+
+        <div class="serviceBox">
+          <div class="icon">🚰</div>
+          <div class="serviceText">
+            <h4>Emergency Drain Cleaning</h4>
+            <p>Clogged sinks, tubs and main lines cleared fast.</p>
+          </div>
+        </div>
+
+        <div class="serviceBox">
+          <div class="icon">🔥</div>
+          <div class="serviceText">
+            <h4>Emergency Water Heater Repair</h4>
+            <p>Diagnose and repair gas and electric water heaters.</p>
+          </div>
+        </div>
+
+        <div class="serviceBox">
+          <div class="icon">🚽</div>
+          <div class="serviceText">
+            <h4>Emergency Toilet &amp; Faucet Repair</h4>
+            <p>Leaks, replacements and installations.</p>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="areas">
+        <h2>Serving New Orleans Area</h2>
+        <div class="areasList">
+          New Orleans &nbsp;|&nbsp; Metairie &nbsp;|&nbsp; Kenner &nbsp;|&nbsp; Chalmette &nbsp;|&nbsp; Gretna &nbsp;|&nbsp; Harvey
+        </div>
+      </div>
+
+      <div class="footerCall">
+        <div class="numberBig">(833) 725-6652</div>
+        <div class="numberSmall">833-PAL-NOLA</div>
+      </div>
+
+    </section>
+
+  </div>
 </body>
-
 </html>
