--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Emergency Plumber New Orleans | Plumber Pals</title>
-  <meta name="description" content="Emergency plumber service in New Orleans. Same day / emergency service ready. Call (833) 725-6652 or 833-PAL-NOLA." />
+  <meta name="description" content="Emergency plumber service in New Orleans. Same Day Emergency Service Ready. Call (833) 725-6652 or 833-PAL-NOLA." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -24,7 +24,7 @@
     </div>
 
     <section class="services">
-      <h2>Our Most Requested<br/>Services</h2>
+      <h2>Our Most Requested Plumbing Services</h2>
       <h3>Same Day Emergency Plumber Service Ready</h3>
 
       <div class="serviceGrid">
