--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!-- index.html (FINAL) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Emergency Plumber New Orleans | Plumber Pals</title>
-  <meta name="description" content="Emergency plumber service in New Orleans. Same Day Emergency Service Ready. Call (833) 725-6652 or 833-PAL-NOLA." />
+  <meta name="description" content="Emergency plumber service in New Orleans. Same day / emergency service ready. Call (833) 725-6652 or 833-PAL-NOLA." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -16,15 +15,16 @@
       <img class="logo" src="logo.png" alt="Plumber Pals - Emergency Plumber in New Orleans" />
     </div>
 
-    <!-- ONLY ONE BUTTON (the big one). The “float button” is already printed on the logo image -->
+    <!-- ONLY ONE BUTTON (removed the small floatButton) -->
     <div class="callButtonBigWrap">
       <a class="callButtonBig" href="tel:+18337256652">
-        <span class="phone">📞</span> CALL NOW
+        <span class="phone">📞</span>
+        <span class="callText">CALL NOW</span>
       </a>
     </div>
 
     <section class="services">
-      <h2>Our Most Requested Plumbing Services</h2>
+      <h2 class="servicesTitle">Our Most Requested Services</h2>
       <h3>Same Day Emergency Plumber Service Ready</h3>
 
       <div class="serviceGrid">
