--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+ <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#e9e4dc">
+  <meta name="color-scheme" content="light">
   <title>Emergency Plumber New Orleans | Plumber Pals</title>
   <meta name="description" content="Emergency plumber service in New Orleans. Same day / emergency service ready. Call (833) 725-6652 or 833-PAL-NOLA." />
   <link rel="stylesheet" href="style.css" />
