--- a/index.html
+++ b/index.html
@@ -1,116 +1,335 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Helps the top browser bar match the site background on mobile -->
-  <meta name="theme-color" content="#e6e1d7">
-  <meta name="color-scheme" content="light">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Emergency Plumber New Orleans | Plumber Pals</title>
-  <meta name="description" content="Emergency plumber service in New Orleans. Same day / emergency service ready. Call (833) 725-6652 or 833-PAL-NOLA." />
-  <link rel="stylesheet" href="style.css" />
+<meta name="theme-color" content="#e6e1d7">
+<meta name="color-scheme" content="light">
+
+<title>Emergency Plumber New Orleans | Same Day Plumbing | Plumber Pals</title>
+
+<meta name="description"
+content="Emergency plumber in New Orleans. Same day plumbing service for leaks, drains, toilets and water heaters. Call (833) 725-6652." />
+
+<meta name="robots" content="index,follow">
+<meta name="author" content="Plumber Pals">
+
+<meta name="geo.region" content="US-LA">
+<meta name="geo.placename" content="New Orleans">
+
+<meta property="og:title" content="Emergency Plumber New Orleans | Plumber Pals">
+<meta property="og:description" content="Emergency plumber service in New Orleans. Same day plumbing service. Call (833) 725-6652">
+<meta property="og:type" content="website">
+
+<link rel="stylesheet" href="style.css" />
+
 </head>
 
+
 <body>
-  <div class="container">
 
-    <div class="hero">
-      <img class="logo" src="logo.png" alt="Plumber Pals - Emergency Plumber in New Orleans" />
-    </div>
+<div class="container">
 
-    <!-- Removed: redundant big button under the float (kept hidden in CSS) -->
-    <div class="callButtonBigWrap">
-      <a class="callButtonBig" href="tel:+18337256652">
-        <span class="phone">📞</span>
-        <span class="callText">CALL NOW</span>
-      </a>
-    </div>
 
-    <section class="services">
-      <h2 class="servicesTitle">Our Most Requested Services</h2>
-      <h3>Same Day Emergency Plumber Service Ready</h3>
+<!-- Light SEO keywords -->
+<div style="display:none">
 
-      <div class="serviceGrid">
+Emergency plumber New Orleans
+Same day plumber New Orleans
+Emergency plumbing New Orleans
+Drain cleaning New Orleans
+Water heater repair New Orleans
+Toilet repair New Orleans
+Leak repair New Orleans
 
-        <div class="serviceBox">
-          <div class="icon">💧</div>
-          <div class="serviceText">
-            <h4>Emergency Leak Repair</h4>
-            <p>Burst pipes and hidden leaks repaired quickly.</p>
-          </div>
-        </div>
+Plumber Metairie
+Plumber Kenner
+Plumber Chalmette
+Plumber Gretna
+Plumber Harvey
 
-        <div class="serviceBox">
-          <div class="icon">🚰</div>
-          <div class="serviceText">
-            <h4>Emergency Drain Cleaning</h4>
-            <p>Clogged sinks, tubs and main lines cleared fast.</p>
-          </div>
-        </div>
+</div>
 
-        <div class="serviceBox">
-          <div class="icon">🔥</div>
-          <div class="serviceText">
-            <h4>Emergency Water Heater Repair</h4>
-            <p>Diagnose and repair gas and electric water heaters.</p>
-          </div>
-        </div>
 
-        <div class="serviceBox">
-          <div class="icon">🚽</div>
-          <div class="serviceText">
-            <h4>Emergency Toilet &amp; Faucet Repair</h4>
-            <p>Leaks, replacements and installations.</p>
-          </div>
-        </div>
 
-      </div>
+<div class="hero">
 
-      <!-- ✅ NEW: float-style bubbles (replaces the “Serving New Orleans Area” spot) -->
-      <div class="navBubbles">
-        <a class="bubbleBtn" href="#about">About Us</a>
-        <a class="bubbleBtn" href="#reviews">Reviews</a>
-        <a class="bubbleBtn" href="#contact">Contact</a>
-      </div>
+<img
+class="logo"
+src="logo.png"
+alt="Plumber Pals Emergency Plumber New Orleans"
+/>
 
-      <!-- ✅ NEW: BELOW THE FOLD SECTIONS -->
-      <section id="about" class="infoSection">
-        <h2>About Plumber Pals</h2>
-        <p>
-          Fast, friendly emergency plumbing across New Orleans and nearby suburbs.
-          Clear communication, clean work, and same-day service when possible.
-        </p>
-      </section>
+</div>
 
-      <section id="reviews" class="infoSection">
-        <h2>Reviews</h2>
-        <p>
-          Coming soon: customer reviews and before/after photos.
-          (We’ll link your Google reviews here as soon as your profile is live.)
-        </p>
-      </section>
 
-      <section id="contact" class="infoSection">
-        <h2>Contact</h2>
+<h1 style="display:none">
 
-        <div class="contactCard">
-          <div class="contactLine"><strong>Call:</strong> <a href="tel:+18337256652">(833) 725-6652</a></div>
-          <div class="contactLine"><strong>Text:</strong> <a href="sms:+18337256652">Tap to text</a></div>
-          <div class="contactLine"><strong>Service Area:</strong> New Orleans • Metairie • Kenner • Chalmette • Gretna • Harvey</div>
-          <div class="contactLine"><strong>Hours:</strong> 24/7 Emergency Service</div>
-        </div>
-      </section>
+Emergency Plumber New Orleans Louisiana
+Same Day Plumbing Service
 
-      <!-- Optional: keep the big number at the bottom (remove if you don’t want it) -->
-      <div class="footerCall">
-        <div class="numberBig">(833) 725-6652</div>
-        <div class="numberSmall">833-PAL-NOLA</div>
-      </div>
+</h1>
 
-    </section>
 
-  </div>
+
+<div class="callButtonBigWrap">
+
+<a class="callButtonBig" href="tel:+18337256652">
+
+<span class="phone">📞</span>
+
+<span class="callText">CALL NOW</span>
+
+</a>
+
+</div>
+
+
+
+<section class="services">
+
+<h2 class="servicesTitle">
+Our Most Requested Services
+</h2>
+
+<h3>
+Same Day Emergency Plumber Service Ready
+</h3>
+
+
+
+<div class="serviceGrid">
+
+
+<div class="serviceBox">
+
+<div class="icon">💧</div>
+
+<div class="serviceText">
+
+<h4>Emergency Leak Repair</h4>
+
+<p>Burst pipes and hidden leaks repaired quickly.</p>
+
+</div>
+
+</div>
+
+
+
+<div class="serviceBox">
+
+<div class="icon">🚰</div>
+
+<div class="serviceText">
+
+<h4>Emergency Drain Cleaning</h4>
+
+<p>Clogged sinks, tubs and main lines cleared fast.</p>
+
+</div>
+
+</div>
+
+
+
+<div class="serviceBox">
+
+<div class="icon">🔥</div>
+
+<div class="serviceText">
+
+<h4>Emergency Water Heater Repair</h4>
+
+<p>Diagnose and repair gas and electric water heaters.</p>
+
+</div>
+
+</div>
+
+
+
+<div class="serviceBox">
+
+<div class="icon">🚽</div>
+
+<div class="serviceText">
+
+<h4>Emergency Toilet &amp; Faucet Repair</h4>
+
+<p>Leaks, replacements and installations.</p>
+
+</div>
+
+</div>
+
+
+</div>
+
+
+
+<!-- FLOAT STYLE BUTTONS -->
+
+<div class="navBubbles">
+
+<a class="bubbleBtn" href="#about">
+About Us
+</a>
+
+<a class="bubbleBtn" href="#reviews">
+Reviews
+</a>
+
+<a class="bubbleBtn" href="#contact">
+Contact
+</a>
+
+</div>
+
+
+
+<!-- ABOUT SECTION -->
+
+<section id="about" class="infoSection">
+
+<h2>About Plumber Pals</h2>
+
+<p>
+
+Plumber Pals provides fast and reliable emergency plumbing
+service throughout New Orleans and nearby suburbs.
+
+We focus on clean work, honest pricing and fast response times.
+
+</p>
+
+</section>
+
+
+
+<!-- REVIEWS SECTION -->
+
+<section id="reviews" class="infoSection">
+
+<h2>Reviews</h2>
+
+<p>
+
+Customer reviews coming soon.
+
+We will link our Google reviews here shortly.
+
+</p>
+
+</section>
+
+
+
+<!-- CONTACT SECTION -->
+
+<section id="contact" class="infoSection">
+
+<h2>Contact</h2>
+
+
+<div class="contactCard">
+
+<div class="contactLine">
+
+<strong>Call:</strong>
+
+<a href="tel:+18337256652">
+(833) 725-6652
+</a>
+
+</div>
+
+
+
+<div class="contactLine">
+
+<strong>Text:</strong>
+
+<a href="sms:+18337256652">
+Tap to text
+</a>
+
+</div>
+
+
+
+<div class="contactLine">
+
+<strong>Service Area:</strong>
+
+New Orleans • Metairie • Kenner • Chalmette • Gretna • Harvey
+
+</div>
+
+
+
+<div class="contactLine">
+
+<strong>Hours:</strong>
+
+Same Day Emergency Service Available
+
+</div>
+
+</div>
+
+
+</section>
+
+
+
+<div class="footerCall">
+
+<div class="numberBig">
+
+(833) 725-6652
+
+</div>
+
+
+<div class="numberSmall">
+
+833-PAL-NOLA
+
+</div>
+
+
+</div>
+
+
+
+</section>
+
+
+</div>
+
+
+
+<!-- GOOGLE STRUCTURED DATA -->
+
+<script type="application/ld+json">
+
+{
+ "@context":"https://schema.org",
+ "@type":"Plumber",
+ "name":"Plumber Pals",
+ "url":"https://www.nolaplumberpals.com",
+ "telephone":"(833) 725-6652",
+ "areaServed":"New Orleans Louisiana",
+ "serviceType":"Emergency Plumbing"
+}
+
+</script>
+
+
+
 </body>
 </html>
